--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
 body{
+    width: 100%;
+    height: 100vh;
+    margin: 0;
     color: #40514E;
     font-family: 'Merriweather', serif;
     margin: 0px;  
